shell: Escape bookmark title

Since we are using a GMarkup rendered for the title,
we need to escape text so characters like & will be
correctly rendered by the TextView.

https://bugzilla.gnome.org/show_bug.cgi?id=663019